--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "jsonwebtoken": "^9.0.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
